cambios en el inidex

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="d-flex flex-column px-2">
-      <div class="d-flex flex-row py-3">
+      <div class="d-flex flex-row py-3" style="height: 300px;">
         <div class="px-2 text-center border-end border-primary w-50">
           <h2>Simple Excuses</h2>
           <p id="excuses">A dog stole my keys while I was praying</p>
@@ -29,7 +29,8 @@
         <div class="px-2 text-center border-start border-primary w-50">
           <h2>Better Excuses</h2>
           <p id="betterExcuses">
-            Simon Bolivar revived and told me not to go out of my house, that's why I stayed on bed.
+            Simon Bolivar revived and told me not to go out of my house, that's
+            why I stayed on bed.
           </p>
           <button id="betterExcusesBtnENG" type="button" class="btn bg-primary">
             Generate
@@ -37,23 +38,23 @@
         </div>
       </div>
 
-      <div class="d-flex flex-row py-3 px-2">
+      <div class="d-flex flex-row py-3 px-2" style="height: 300px;">
         <div class="px-2 text-center border-end border-primary w-50">
-          <h2>Simple Excuses</h2>
+          <h2>Excusas Simples</h2>
           <p id="excusa">Un ladrón destruyó mis llaves durante mi almuerzo</p>
           <button id="excusesBtnESP" type="button" class="btn bg-primary">
-            Generate
+            Generar
           </button>
         </div>
 
         <div class="px-2 text-center border-start border-primary w-50">
-          <h2>Better Excuses</h2>
+          <h2>Mejores Excusas</h2>
           <p id="mejorExcusa">
             Un chico volo y destruyo un auto con su rasho laser y por eso no
             pude ir al trabajo
           </p>
           <button id="betterExcusesBtnESP" type="button" class="btn bg-primary">
-            Generate
+            Generar
           </button>
         </div>
       </div>
